--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,35 +3,49 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
+  font-family: "Courier New", Courier, monospace;
 }
+
 #bienvenida {
-  font-family: fantasy;
 }
+
 #navbarr {
   background: linear-gradient(90deg, silver, #484f59) !important;
 }
+#navbar-logo {
+  width: 100px;
+}
+.navbar-brand {
+  align-content: center;
+}
+
 .pagination > li > a {
   color: black;
   background: linear-gradient(160deg, silver, #484f59) !important;
 }
 thead > tr > th {
   background: linear-gradient(0deg, silver, #484f59) !important;
+  text-align: center;
 }
 
 tbody > tr > th,
 td {
+  font-family: Georgia, "Times New Roman", Times, serif;
   background: linear-gradient(180deg, white, silver) !important;
+  vertical-align: baseline;
+  text-align: center;
 }
 
 #lista {
   background-color: linear-gradient(#9e8122, #fccc2f);
   border-style: groove;
   border-width: 4px;
+  margin: 20px;
 }
 .logo {
   background: linear-gradient(90deg, silver, grey);
-  min-width: 200px;
-  max-width: 450px;
+  min-width: 100px;
+  max-width: 500px;
   border-radius: 100%;
   border-style: outset;
   -webkit-backdrop-filter: blur(20px);
@@ -52,5 +66,6 @@ td {
 }
 
 #digimon-img {
-  max-width: 100px;
+  max-width: 130px;
+  min-width: 20px;
 }
